[package]
name = "papertrail_filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
reqwest = {version = "0.11.14", features = ["gzip"]}
tokio = { version = "1.25.0", features = ["full"] }
inquire = { version = "0.5.3", features = ["date"] }
flate2 = "1.0.25"